// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home matches snapshot on empty photos collection 1`] = `
<div>
  <div
    class="empty"
  >
    No data...
  </div>
</div>
`;

exports[`Home matches snapshot on loaded with photos 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/yC-Yzbqy7PY"
        src="https://picsum.photos/id/0/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/LNRyGwIJr5c"
        src="https://picsum.photos/id/1/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/N7XodRrbzS0"
        src="https://picsum.photos/id/2/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/Dl6jeyfihLk"
        src="https://picsum.photos/id/3/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/y83Je1OC6Wc"
        src="https://picsum.photos/id/4/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/LF8gK8-HGSg"
        src="https://picsum.photos/id/5/5000/3334"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/tAKXap853rY"
        src="https://picsum.photos/id/6/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/BbQLHCpVUqA"
        src="https://picsum.photos/id/7/4728/3168"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/xII7efH1G6o"
        src="https://picsum.photos/id/8/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/ABDTiLqDhJA"
        src="https://picsum.photos/id/9/5000/3269"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/6J--NXulQCs"
        src="https://picsum.photos/id/10/2500/1667"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/Cm7oKel-X2Q"
        src="https://picsum.photos/id/11/2500/1667"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/I_9ILwtsl_k"
        src="https://picsum.photos/id/12/2500/1667"
      />
    </div>
  </div>
</div>
`;

exports[`Home matches snapshot on loading 1`] = `
<div>
  <div
    class="container"
  />
  <div
    class="row"
  >
    <div
      class="loader"
    />
  </div>
</div>
`;

exports[`Home matches snapshot with favorites 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="gridItem"
    >
      <div
        class="favorite"
      >
        ❤️
      </div>
      <img
        alt="https://unsplash.com/photos/yC-Yzbqy7PY"
        src="https://picsum.photos/id/0/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <div
        class="favorite"
      >
        ❤️
      </div>
      <img
        alt="https://unsplash.com/photos/LNRyGwIJr5c"
        src="https://picsum.photos/id/1/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/N7XodRrbzS0"
        src="https://picsum.photos/id/2/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/Dl6jeyfihLk"
        src="https://picsum.photos/id/3/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/y83Je1OC6Wc"
        src="https://picsum.photos/id/4/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/LF8gK8-HGSg"
        src="https://picsum.photos/id/5/5000/3334"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/tAKXap853rY"
        src="https://picsum.photos/id/6/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/BbQLHCpVUqA"
        src="https://picsum.photos/id/7/4728/3168"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/xII7efH1G6o"
        src="https://picsum.photos/id/8/5000/3333"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/ABDTiLqDhJA"
        src="https://picsum.photos/id/9/5000/3269"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/6J--NXulQCs"
        src="https://picsum.photos/id/10/2500/1667"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/Cm7oKel-X2Q"
        src="https://picsum.photos/id/11/2500/1667"
      />
    </div>
    <div
      class="gridItem"
    >
      <img
        alt="https://unsplash.com/photos/I_9ILwtsl_k"
        src="https://picsum.photos/id/12/2500/1667"
      />
    </div>
  </div>
</div>
`;
